--- a/JsonUtils/JsonUtils.csproj
+++ b/JsonUtils/JsonUtils.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JsonUtils\JsonUtils.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 </Project>
